--- a/src/containers/Search/ResultsHeader.css
+++ b/src/containers/Search/ResultsHeader.css
@@ -21,8 +21,8 @@
 .kgs-result-header > div {
     display: -ms-grid;
     display: grid;
-    -ms-grid-columns: min-content;
-    grid-template-columns: min-content;
+    -ms-grid-columns: 1fr;
+    grid-template-columns: 1fr;
     -ms-grid-rows: auto auto auto;
     grid-template-rows: auto auto auto;
     grid-template-areas: "stats"
@@ -35,8 +35,25 @@
     -ms-grid-row: 1;
     grid-area: stats;
     display: block; 
-    white-space: nowrap;
     font-size: 20px;
+    white-space: normal;
+    text-align: left;
+}
+
+.kgs-result-header .kgs-hitStats.no-hits {
+    margin: 30px 0;
+    text-align: center;
+    white-space: normal;
+    line-height: 1.3em;
+}
+
+@media (min-width:992px) {
+
+    .kgs-result-header .kgs-hitStats.no-hits {
+        margin-top: 50px 0;
+        white-space: nowrap;
+        text-align: left;
+    }
 }
 
 .kgs-result-header .kgs-layout-mode-toggle {
